--- a/ClientBeerTap/src/styles.css
+++ b/ClientBeerTap/src/styles.css
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
-/*@import "./material.style.css";*/
+html, body, material-app, md-sidenav-container {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.my-content
+{
+    padding: 24px;
+}
