Adding padding for the main content. However the usage is going to change soon.

--- a/ClientBeerTap/src/styles.css
+++ b/ClientBeerTap/src/styles.css
@@ -7,6 +7,13 @@ html, body, material-app, md-sidenav-container {
   height: 100%;
 }
 
+md-sidenav
+{
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 12px;
+}
+
 .my-content
 {
     padding: 24px;
