Ehh kinda works need to better define a custom template

--- a/ClientBeerTap/src/app/app.component.html
+++ b/ClientBeerTap/src/app/app.component.html
@@ -7,7 +7,7 @@
     </div>
   </md-sidenav>
   <div class="my-content">
-    <button md-fab (click)="sidenav.toggle()">
+    <button md-fab color="accent" (click)="sidenav.toggle()">
       <md-icon>menu</md-icon>
     </button>
 
