--- a/ClientBeerTap/src/styles.css
+++ b/ClientBeerTap/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+/* @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"; */
+
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
 
 html, body, material-app, md-sidenav-container {
   margin: 0;
